# market-bot

./: .gitignore  Dockerfile  pyproject.toml
cmd/: main.py
config/: config.py
handlers/: start.py
migrations/: env.py
migrations/versions/: 3dbadee98111_init.py  f82361275831_add_status.py
models/: finance.py  goods.py
service/: report.py
tests/: db.py
